--- a/user_superadmin/treatment_detail_scheduled.html
+++ b/user_superadmin/treatment_detail_scheduled.html
@@ -347,8 +347,27 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="row justify-content-center">
 
 								<div class="col-lg-8 col-xl-6">
+									<div class="kt-portlet kt-portlet--mobile">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<h3 class="kt-portlet__head-title">
+													Treatment Status : <span class="kt-portlet__head-title kt-font-dark">Scheduled</span>
+												</h3>
+											</div>
+											<div class="kt-portlet__head-toolbar">
+												<ul class="nav nav-pills" role="tablist">
+													<li class="nav-item">
+														<a class="nav-link active">
+															SPK
+														</a>
+													</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
 
-									<!--begin::Portlet-->
+								<div class="col-lg-8 col-xl-6">
 									<div class="kt-portlet kt-portlet--mobile">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
@@ -360,35 +379,40 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__body">
                                             <div style="margin-bottom:20px;">
                                                 <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
+												<a href="#"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
                                                 <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
                                                 <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
                                             </div>
-                                            <table class="col-5" style="margin-bottom:50px">
+                                            <table class="col-sm-7 col-md-6" style="margin-bottom:50px">
                                                 <tr>
                                                     <th>Tanggal</th>
                                                     <th>:</th>
                                                     <th style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
                                                 </tr>
                                                 <tr>
-                                                    <th>Therapist</th>
+                                                    <th>Jadwal</th>
                                                     <th>:</th>
-                                                    <th style="font-weight:500;" name="treatment_therapist">Ka</th>
+                                                    <th style="font-weight:500;" name="treatment_jadwal">10.00 WITA</th>
                                                 </tr>
                                             </table>
-        									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
-                                            <div class="col-12">
-												<div class="row justify-end" style="padding: 0px; margin-top:50px;">
-													<div class="col-6 justify-end" style="padding: 0px">
-		                                                <button type="button" class="btn btn-danger col-5" id="kt_sweetalert_batal">Batal</buttton>&nbsp;
-														<button type="button" class="btn btn-brand col-5" onclick="window.location.href='user_admin/listTreatment_detail_scheduled_mulai.html'" style="margin-left: 5px">Mulai</buttton>
-													</div>
+											<div class="row" style="margin-top:50px;">
+												<div class="col-6" style="padding-right:0px;">
+													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
+		                                                <tr>
+		                                                    <th width="35%">Waktu Mulai</th>
+		                                                    <th width="10%">:</th>
+		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">-</th>
+		                                                </tr>
+		                                                <tr>
+		                                                    <th>Waktu Selesai</th>
+		                                                    <th>:</th>
+		                                                    <th style="font-weight:500;" name="waktu-selesai">-</th>
+		                                                </tr>
+		                                            </table>
 												</div>
                                             </div>
 										</div>
 									</div>
-
-									<!--end::Portlet-->
 								</div>
 
 							</div>
@@ -468,26 +492,6 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_superadmin.js"></script>
-
-		<script>
-			$('#kt_sweetalert_batal').click(function(e) {
-				swal.fire({
-					title: 'Yakin untuk membatalkan?',
-					text: "Tindakan ini tidak bisa diubah kembali!",
-					type: 'warning',
-					showCancelButton: true,
-					confirmButtonText: 'Ya, batalkan!'
-				}).then(function(result) {
-					if (result.value) {
-						swal.fire(
-							'Dibatalkan!',
-							'Treatment telah dibatalkan.',
-							'success'
-						)
-					}
-				});
-			});
-		</script>
 
 		<!--end::Page Scripts -->
 	</body>
